--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
 group 'com.zerobase-11.master'
@@ -9,20 +10,24 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
-    // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
-    // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation 'com.google.code.gson:gson:2.9.0'
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
-    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
-    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
-
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
